readd broken submodules

--- a/.gitmodules
+++ b/.gitmodules
@@ -8,3 +8,9 @@
 [submodule "vendor/portable-file-dialogs"]
 	path = vendor/portable-file-dialogs
 	url = git@github.com:JVital2013/portable-file-dialogs.git
+[submodule "vendor/glfw"]
+	path = vendor/glfw
+	url = git@github.com:KaspersTools/glfw.git
+[submodule "vendor/imgui"]
+	path = vendor/imgui
+	url = git@github.com:KaspersTools/imgui.git
