Add plugin manager

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -106,9 +106,11 @@ else ()
   message("Building with HummingBirdCore as lib")
 endif ()
 
+set(HUMMINGBIRD_BUILD_DIR ${CMAKE_CURRENT_BINARY_DIR})
+set(HUMMINGBIRD_PLUGINS_DIR "${HUMMINGBIRD_BUILD_DIR}/plugins")
 
-add_subdirectory(HummingBirdTestPlugin EXCLUDE_FROM_ALL)
-target_include_directories(HummingBirdCore PUBLIC HummingBirdTestPlugin/include)
+add_subdirectory(HummingBirdPluginManager EXCLUDE_FROM_ALL)
+target_include_directories(HummingBirdCore PUBLIC HummingBirdPluginManager/include)
 
 
 ########################################################################
