--- a/HummingBirdPluginManager/CMakeLists.txt
+++ b/HummingBirdPluginManager/CMakeLists.txt
@@ -2,33 +2,23 @@ cmake_minimum_required(VERSION 3.24.4)
 project(HUMMINGBIRD_PLUGIN_MANAGER)
 set(CMAKE_CXX_STANDARD 23)
 
-set(HUMMINGBIRD_PLUGIN_MANAGER_DIR ${CMAKE_CURRENT_SOURCE_DIR})
 
-if(NOT DEFINED HUMMINGBIRD_PLUGINS_DIR)
-    set(HUMMINGBIRD_PLUGINS_DIR ${CMAKE_CURRENT_BINARY_DIR}/plugins)
+
+if(NOT DEFINED HUMMINGBIRD_PLUGIN_DIR)
+    set(HUMMINGBIRD_PLUGIN_MANAGER_DIR ${CMAKE_CURRENT_BINARY_DIR})
+else()
+    set(HUMMINGBIRD_PLUGIN_MANAGER_DIR ${HUMMINGBIRD_PLUGIN_DIR}/MANAGER)
 endif()
 
-add_library(HUMMINGBIRD_PLUGIN_MANAGER SHARED src/PluginManager.cpp src/PluginManager.h)
+message(STATUS "HUMMINGBIRD_PLUGIN_MANAGER_DIR: ${HUMMINGBIRD_PLUGIN_MANAGER_DIR}")
+
+add_library(HUMMINGBIRD_PLUGIN_MANAGER SHARED
+        src/PluginManager.cpp src/PluginManager.h)
 target_include_directories(HUMMINGBIRD_PLUGIN_MANAGER PRIVATE include)
 
 set_target_properties(HUMMINGBIRD_PLUGIN_MANAGER PROPERTIES
-        LIBRARY_OUTPUT_DIRECTORY "${HUMMINGBIRD_PLUGINS_DIR}/MANAGER"
+        LIBRARY_OUTPUT_DIRECTORY "${HUMMINGBIRD_PLUGIN_DIR}"
 )
-
-#check if there is already a imgui target,
-IF(NOT TARGET imgui)
-    set(IMGUI_ENABLE_STDLIB_SUPPORT ON CACHE BOOL "" FORCE)
-    set(IMGUI_EXAMPLES OFF CACHE BOOL "" FORCE)
-    set(IMGUI_DEMO OFF CACHE BOOL "" FORCE)
-    set(IMGUI_ENABLE_FREETYPE OFF CACHE BOOL "" FORCE)
-    set(IMGUI_IMPL_GLFW OFF CACHE BOOL "" FORCE)
-    set(IMGUI_IMPL_VULKAN OFF CACHE BOOL "" FORCE)
-    add_subdirectory(../vendor/imgui ${CMAKE_CURRENT_BINARY_DIR}/imgui)
-ENDIF()
 
 #enable IMGUI_ENABLE_STDLIB_SUPPORT
-target_link_libraries(HUMMINGBIRD_PLUGIN_MANAGER PUBLIC imgui imgui-stdlib imgui-extension)
-list(APPEND HUMMINGBIRD_PLUGIN_MANAGER_LIBS
-        imgui-extension
-)
-#make HUMMINGBIRD_PLUGIN_MANAGER available to parent cmakelist
+target_link_libraries(HUMMINGBIRD_PLUGIN_MANAGER PUBLIC imgui-extension)
