--- a/HummingBirdPluginManager/CMakeLists.txt
+++ b/HummingBirdPluginManager/CMakeLists.txt
@@ -3,7 +3,7 @@ project(HUMMINGBIRD_PLUGIN_MANAGER)
 set(CMAKE_CXX_STANDARD 23)
 
 if(NOT DEFINED HUMMINGBIRD_PLUGIN_DIR)
-    set(HUMMINGBIRD_PLUGIN_MANAGER_DIR ${CMAKE_CURRENT_BINARY_DIR})
+    set(HUMMINGBIRD_PLUGIN_MANAGER_DIR ${CMAKE_CURRENT_BINARY_DIR}/MANAGER)
 else()
     set(HUMMINGBIRD_PLUGIN_MANAGER_DIR ${HUMMINGBIRD_PLUGIN_DIR}/MANAGER)
 endif()
@@ -15,7 +15,7 @@ add_library(HUMMINGBIRD_PLUGIN_MANAGER SHARED
 target_include_directories(HUMMINGBIRD_PLUGIN_MANAGER PRIVATE include)
 
 set_target_properties(HUMMINGBIRD_PLUGIN_MANAGER PROPERTIES
-        LIBRARY_OUTPUT_DIRECTORY "${HUMMINGBIRD_PLUGIN_DIR}"
+        LIBRARY_OUTPUT_DIRECTORY "${HUMMINGBIRD_PLUGIN_MANAGER_DIR}"
 )
 
 #enable IMGUI_ENABLE_STDLIB_SUPPORT
