--- a/.gitmodules
+++ b/.gitmodules
@@ -14,6 +14,4 @@
 [submodule "vendor/imgui"]
 	path = vendor/imgui
 	url = git@github.com:KaspersTools/imgui.git
-[submodule "vendor/HummingBird/SqlTool"]
-	path = vendor/HummingBird/SqlTool
-	url = ../SqlTool/
+	branch = docking
