--- a/HummingBirdPluginExample/CMakeLists.txt
+++ b/HummingBirdPluginExample/CMakeLists.txt
@@ -25,9 +25,9 @@ project(HUMMINGBIRD_PLUGIN_EXAMPLE)
 set(CMAKE_CXX_STANDARD 23)
 
 if(NOT DEFINED HUMMINGBIRD_PLUGIN_DIR)
-    set(HUMMINGBIRD_PLUGIN_EXAMPLE_DIR ${CMAKE_CURRENT_BINARY_DIR}/EXAMPLE)
+    set(HUMMINGBIRD_PLUGIN_EXAMPLE_DIR ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/plugins/EXAMPLE)
 else()
-    set(HUMMINGBIRD_PLUGIN_EXAMPLE_DIR ${HUMMINGBIRD_PLUGIN_DIR}/EXAMPLE)
+    set(HUMMINGBIRD_PLUGIN_EXAMPLE_DIR ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/plugins/EXAMPLE)
 endif()
 
 message(STATUS "HUMMINGBIRD_PLUGIN_EXAMPLE_DIR: ${HUMMINGBIRD_PLUGIN_EXAMPLE_DIR}")
