--- a/HummingBirdPluginManager/CMakeLists.txt
+++ b/HummingBirdPluginManager/CMakeLists.txt
@@ -3,9 +3,9 @@ project(HUMMINGBIRD_PLUGIN_MANAGER)
 set(CMAKE_CXX_STANDARD 23)
 
 if(NOT DEFINED HUMMINGBIRD_PLUGIN_DIR)
-    set(HUMMINGBIRD_PLUGIN_MANAGER_DIR ${CMAKE_CURRENT_BINARY_DIR}/MANAGER)
+    set(HUMMINGBIRD_PLUGIN_MANAGER_DIR ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/plugins/MANAGER)
 else()
-    set(HUMMINGBIRD_PLUGIN_MANAGER_DIR ${HUMMINGBIRD_PLUGIN_DIR}/MANAGER)
+    set(HUMMINGBIRD_PLUGIN_MANAGER_DIR ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/plugins/MANAGER)
 endif()
 
 message(STATUS "HUMMINGBIRD_PLUGIN_MANAGER_DIR: ${HUMMINGBIRD_PLUGIN_MANAGER_DIR}")
